# scrapy_imdb

./: pyproject.toml  readme.md  todo 02062024.md
Database_Schema_for_future_fix/: Schema_Database_allocine_series_movies.drawio
bookscraper/bookscraper/: create_db.py  items.py  models.py  orm.py  pipelines.py  queries.py  settings.py
bookscraper/bookscraper/spiders/: bookspider.py  seriespider.py
script_RG_azure/: creation_RG.sh
