[tool.poetry]
name = "scrapy-imdb"
version = "0.1.0"
description = ""
authors = ["bn-pam <bonneau.pam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
sqlalchemy = "^2.0.31"
scrapy = "^2.11.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
dateparser = "^1.2.0"
attempt = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
